amplication-build-ckuk2lf5s3135431bs6srtzw3rm

--- a/ampconfig.json
+++ b/ampconfig.json
@@ -3,7 +3,7 @@
   "appInfo": {
     "name": "Amplication SaaS Demo",
     "description": "",
-    "version": "v0f5yqt2",
+    "version": "5t2b5o8h",
     "id": "ckujzjlds13903461bs66yfn9xe6",
     "url": "https://app.amplication.com/ckujzjlds13903461bs66yfn9xe6",
     "settings": {
