--- a/ampconfig.json
+++ b/ampconfig.json
@@ -3,7 +3,7 @@
   "appInfo": {
     "name": "Amplication SaaS Demo",
     "description": "",
-    "version": "vl37k95y",
+    "version": "dlf8ywgm",
     "id": "ckujzjlds13903461bs66yfn9xe6",
     "url": "https://app.amplication.com/ckujzjlds13903461bs66yfn9xe6",
     "settings": {
