amplication-build-ckulnvqs77825841bs6sk37z6xf

--- a/ampconfig.json
+++ b/ampconfig.json
@@ -3,7 +3,7 @@
   "appInfo": {
     "name": "Amplication SaaS Demo",
     "description": "",
-    "version": "dlf8ywgm",
+    "version": "7uys8kpe",
     "id": "ckujzjlds13903461bs66yfn9xe6",
     "url": "https://app.amplication.com/ckujzjlds13903461bs66yfn9xe6",
     "settings": {
