--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,5 @@ POSTGRESQL_PORT=5432
 POSTGRESQL_URL=postgres://admin:admin@localhost:5432
 BCRYPT_SALT=10
 COMPOSE_PROJECT_NAME=amp_ckujzjlds13903461bs66yfn9xe6
+JWT_SECRET_KEY=Change_ME!!!
+JWT_EXPIRATION=2d
